# Debde

./: Cargo.toml  README.md
bench/: Cargo.toml
debde/: Cargo.toml
debde-proto/: Cargo.toml
debde/src/: main.rs  mascot.rs
docs/: roadmap.md
fuzz/: Cargo.toml
fuzz/src/: fuzz.rs
perf/: Cargo.toml
