[package]
name = "debde"
version = "0.1.0"
authors = ["zTgx <beautifularea@163.com>"]
repository = "https://github.com/zTgx/Debde.git"
readme = "README.md"
keywords = ["game", "quic"]
categories = [ "games" ]
license = "MIT"
description = "A QUIC based distributed server for Games written in Rust"
edition = "2018"

[dependencies]

[dev-dependencies]